operators/gitea/global/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea-system
  labels:
    name: gitea-system
    argocd.argoproj.io/managed-by: openshift-gitops
