operators/gitea/global/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
  name: gitea-db
  namespace: gitea-system
spec:
  ports:
    - name: postgresql
      nodePort: 0
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: gitea-db
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    template.alpha.openshift.io/wait-for-ready: true
  name: gitea-db
  namespace: gitea-system
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gitea-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: gitea-db
    spec:
      containers:
        - env:
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  key: db.user
                  name: gitea-db
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: db.password
                  name: gitea-db
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  key: db.name
                  name: gitea-db
            - name: POSTGRES_PORT
              valueFrom:
                secretKeyRef:
                  key: db.port
                  name: gitea-db
            - name: PGDATA
              value: /var/lib/pgsql/data/pgdata
          image: docker.io/library/postgres:16.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 120
            timeoutSeconds: 10
          name: postgresql
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec /usr/bin/pg_isready -U $POSTGRES_USER -d $POSTGRES_DB -h localhost -p $POSTGRES_PORT
            initialDelaySeconds: 5
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: gitea-db-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: gitea-db-data
          persistentVolumeClaim:
            claimName: gitea-db
