operators/gitea/global/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea-system
  labels:
    app: gitea
spec:
  selector:
    app: gitea
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  - name: ssh
    port: 22
    targetPort: 22
    protocol: TCP
  type: ClusterIP
